# secure-federated-learning

./: .gitignore  pyproject.toml
secure_federated_learning/: main.py
secure_federated_learning/federated_learning/: aggregator.py  communication.py  trainer.py
secure_federated_learning/secure_computation/: privacy.py  smpc.py
secure_federated_learning/utils/: energy_optimization.py  model_compression.py
